--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ body {
 
 @media only screen and (min-width: 600px) {
     .results-lost {
-        position: relative;
+        position: fixed;
         top: 200px;
         left: 75vw;
         font-size: xx-large;
@@ -78,7 +78,7 @@ body {
         margin: 10vw;
     }
     .results-won {
-        position: relative;
+        position: fixed;
         top: 200px;
         right: 75vw;
         font-size: xx-large;
