--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,10 @@ h2 {
     height: 50px;
     font-size: 2rem;
     margin: 15px;
-   
+    /*TAKEN FROM https://stackoverflow.com/questions/47127201/webkit-appearance-none-not-working-for-button*/
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
 
 }
 
