--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,10 +38,6 @@ h2 {
     height: 50px;
     font-size: 2rem;
     margin: 15px;
-    /*TAKEN FROM https://stackoverflow.com/questions/47127201/webkit-appearance-none-not-working-for-button*/
-    -webkit-appearance:none!important;
-    -moz-appearance:none!important;
-    appearance:none!important;
 
 }
 
@@ -53,6 +49,7 @@ h2 {
     color: #E3F0FF;
 }
 
+/*Adds text description after buttons*/
 .btn::after{
     content: attr(id);
     font-size: 1rem;
