--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,9 @@ h2 {
     background-color:#414656 ;
     box-sizing: border-box;
     width: 70%;
-    min-width: 300px;
+    min-width: 400px;
     max-width: 500px;
+    min-height: 550px;
     border: solid #023B71 10px;
     border-radius: 25px;
     margin-left: auto;
@@ -21,6 +22,8 @@ h2 {
 }
 
 .user-choices {
+    display:flexbox;
+    min-height:220px;
     width: 75%;
     max-width: 200px;
     font-size: 1rem;
@@ -30,14 +33,19 @@ h2 {
     padding: 10px;
 }
 
+
+
 .btn {
+    float:left;
+    color: black;
     border-radius: 30%;
     background-color: #E3F0FF;
-    border: 3px solid;
+    border: 3px solid black;
     width: 50px;
     height: 50px;
     font-size: 2rem;
-    margin: 15px;
+    margin: 20px;
+    padding-top: 5px;
 
 }
 
@@ -47,6 +55,7 @@ h2 {
 .btn:hover {
     background-color: #023B71;
     color: #E3F0FF;
+    border-color:#E3F0FF;
 }
 
 /*Adds text description after buttons*/
