--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ h2 {
     border-radius: 25px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 5px;
     padding: 5%;
 }
 
@@ -116,7 +117,18 @@ clicking button too early.*/
     font-size: medium;
     width: 100px;
 }
+footer {
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    padding-top: 20px;
+    background-color: #023B71;
+    
+}
 
+#credit {
+    color: #E3F0FF;
+}
 /** Changes display position of results when screen is wider than 600px**/
 @media only screen and (min-width: 600px) {
     .results-lost {
