--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,8 +121,10 @@ footer {
     position: absolute;
     width: 100%;
     left: 0px;
+    right: 0px;
     padding-top: 20px;
-    background-color: #023B71;
+    
+    
     
 }
 
